03_harbor/notary-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: gitlab-issuer
    kubernetes.io/ingress.class: gitlab-nginx
    kubernetes.io/ingress.provider: nginx
  name: notary-harbor
  namespace: default
spec:
  rules:
  - host: notary.harbor.gitlab.rancheris.in
    http:
      paths:
      - backend:
          serviceName: harbor
          servicePort: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - notary.harbor.gitlab.rancheris.in
    secretName: core-harbor-gitlab-tls
